Fixed a bug where the Agenda text "Read more..." label won't disappear on mobile

--- a/app/styles/components/_agenda.scss
+++ b/app/styles/components/_agenda.scss
@@ -6,8 +6,14 @@
         border-radius: 5px;
         position: relative;
 
-        &.expanded .agenda-abstract {
-            max-height: 1000px;
+        &.expanded {
+            &:after {
+                opacity: 0;
+            }
+
+            .agenda-abstract {
+                max-height: 1000px;
+            }
         }
 
         body:not(.mobile) &:hover {
